- Added text-wrap: pretty to the "read x guide"   links in the card to prevent orphaned words   at narrower widths; though it doesn't seem to   be respecting it; might have to do with there   being dynamically generated text right in the   middle?

--- a/_sass/_components/card-with-image-guides.scss
+++ b/_sass/_components/card-with-image-guides.scss
@@ -14,3 +14,7 @@
   text-wrap: pretty;
   flex-grow: 1;
 }
+
+.card-with-image-guides a{
+  text-wrap: pretty;
+}
